Fixed Cards on smaller Screens
Added media query for screens smaller than 1280px

--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,16 @@ h1, h2, h3, h4, h5, p, span, li, ul, a, button {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 15vw;
+  margin-right: 15vw;
   margin-top: -5rem;
+}
+
+@media only screen and (max-width: 1280px) {
+  .cards {
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
 }
 
 .card {
